--- a/src/Stenn.AspNetCore.OData.Versioning.Extensions.DependencyInjection/Stenn.AspNetCore.OData.Versioning.Extensions.DependencyInjection.csproj
+++ b/src/Stenn.AspNetCore.OData.Versioning.Extensions.DependencyInjection/Stenn.AspNetCore.OData.Versioning.Extensions.DependencyInjection.csproj
@@ -1,10 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net5.0</TargetFramework>
-        <RootNamespace>AspNetCore.OData.Versioning.Extensions.DependencyInjection</RootNamespace>
+        <Description>Dependency injection extensions for Stenn.AspNetCore.OData.Versioning</Description>
     </PropertyGroup>
-
+    
     <ItemGroup>
         <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="5.0.0" />
         <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="5.0.0" />
