--- a/src/Stenn.AspNetCore.Versioning.Extensions.DependencyInjection/Stenn.AspNetCore.Versioning.Extensions.DependencyInjection.csproj
+++ b/src/Stenn.AspNetCore.Versioning.Extensions.DependencyInjection/Stenn.AspNetCore.Versioning.Extensions.DependencyInjection.csproj
@@ -1,12 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net5.0</TargetFramework>
-        <RootNamespace>AspNetCore.Versioning.Extensions.DependencyInjection</RootNamespace>
+        <Description>Dependency injection extensions for Stenn.AspNetCore.Versioning</Description>
     </PropertyGroup>
-
-    <ItemGroup>
-        <!--        <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.2"/>-->
+    
+    <ItemGroup>        
         <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="5.0.0" />
         <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="5.0.0" />
     </ItemGroup>
