--- a/src/Stenn.AspNetCore.Versioning/Stenn.AspNetCore.Versioning.csproj
+++ b/src/Stenn.AspNetCore.Versioning/Stenn.AspNetCore.Versioning.csproj
@@ -1,10 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net5.0</TargetFramework>
-        <RootNamespace>AspNetCore.Versioning</RootNamespace>
+        <Description>Api versioning implementation for ASP.NET Core</Description>
     </PropertyGroup>
-
+    
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="5.0.0" />
     </ItemGroup>
