--- a/src/Stenn.AspNetCore.OData.Versioning/Stenn.AspNetCore.OData.Versioning.csproj
+++ b/src/Stenn.AspNetCore.OData.Versioning/Stenn.AspNetCore.OData.Versioning.csproj
@@ -2,6 +2,7 @@
 
     <PropertyGroup>
         <Description>Api versioning implementation for ASP.NET Core OData 8.+</Description>
+        <Nullable>enable</Nullable>
     </PropertyGroup>
 
     <ItemGroup>
@@ -10,6 +11,22 @@
 
     <ItemGroup>
         <ProjectReference Include="..\Stenn.AspNetCore.Versioning\Stenn.AspNetCore.Versioning.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <EmbeddedResource Update="ApiExplorer\SR.resx">
+            <Generator>ResXFileCodeGenerator</Generator>
+            <LastGenOutput>SR.Designer.cs</LastGenOutput>
+        </EmbeddedResource>
+    </ItemGroup>
+
+    <ItemGroup>
+        <Compile Update="ApiExplorer\SR.Designer.cs">
+            <DesignTime>True</DesignTime>
+            <AutoGen>True</AutoGen>
+            <DependentUpon>SR.resx</DependentUpon>
+        </Compile>
+        <Compile Remove="ApiExplorer\ODataApiExplorerProvider.Misc.cs" />
     </ItemGroup>
 
 </Project>
