--- a/src/.msbuild/package.props
+++ b/src/.msbuild/package.props
@@ -8,8 +8,10 @@
         
         <ErrorReportUrl>https://github.com/StennGroup/stenn-aspnetcore-versioning/issues</ErrorReportUrl>
         <PackageProjectUrl>https://github.com/StennGroup/stenn-aspnetcore-versioning</PackageProjectUrl>
-        <PackageTags>Microsoft;AspNet;AspNetCore;Versioning;OData</PackageTags>
+        <PackageTags>Microsoft AspNet AspNetCore Versioning OData</PackageTags>
     </PropertyGroup>
+    
+    
     
      <!--Packages details-->
     <ItemGroup>
