--- a/samples/TestSample/TestSample.csproj
+++ b/samples/TestSample/TestSample.csproj
@@ -8,12 +8,13 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="5.0.10" />
-        <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="5.0.0" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="5.0.11" />
+        <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="5.0.11" />
 
-        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.2" />
-        <PackageReference Include="Swashbuckle.AspNetCore.Newtonsoft" Version="6.2.2" />
-        <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="6.2.2" />
+        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+        <PackageReference Include="Swashbuckle.AspNetCore.Newtonsoft" Version="6.2.3" />
+        <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="6.2.3" />
+        <PackageReference Include="Swashbuckle.AspNetCore.ReDoc" Version="6.2.3" />
     </ItemGroup>
 
     <ItemGroup>
