Add Version and Controller to UseCsvDocs and UseODataCsvDocs feature

--- a/src/Stenn.AspNetCore.OData.Versioning.Extensions.DependencyInjection/Stenn.AspNetCore.OData.Versioning.Extensions.DependencyInjection.csproj
+++ b/src/Stenn.AspNetCore.OData.Versioning.Extensions.DependencyInjection/Stenn.AspNetCore.OData.Versioning.Extensions.DependencyInjection.csproj
@@ -2,6 +2,7 @@
 
     <PropertyGroup>
         <Description>Dependency injection extensions for Stenn.AspNetCore.OData.Versioning</Description>
+        <Nullable>enable</Nullable>
     </PropertyGroup>
 
     <ItemGroup>
