Move to Stenn.MSBuild.Extensions package

--- a/src/.msbuild/build.props
+++ b/src/.msbuild/build.props
@@ -11,14 +11,17 @@
         <NoWarn>$(NoWarn);CS1591</NoWarn>
     </PropertyGroup>
 
+
+    <!--    Stenn MSBuild extensions-->
+    <ItemGroup>
+        <PackageReference Include="Stenn.MSBuild.Extensions" Version="1.0.12">
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+    </ItemGroup>
     <PropertyGroup>
-        <!--        Nuget-->
-        <PatchNumSuffix>beta</PatchNumSuffix>
-        
-        <PublishRepositoryUrl>true</PublishRepositoryUrl>
-        
-        <EmbedUntrackedSources>true</EmbedUntrackedSources>
-        <IncludeSymbols>true</IncludeSymbols>
-        <SymbolPackageFormat>snupkg</SymbolPackageFormat>    
-    </PropertyGroup>    
+        <EnableExtension_SourceLinkGitHub>true</EnableExtension_SourceLinkGitHub>
+        <EnableExtension_AssemblyInfo>true</EnableExtension_AssemblyInfo>
+    </PropertyGroup>
+    
 </Project>
