--- a/src/Stenn.AspNetCore.OData.Versioning/Stenn.AspNetCore.OData.Versioning.csproj
+++ b/src/Stenn.AspNetCore.OData.Versioning/Stenn.AspNetCore.OData.Versioning.csproj
@@ -6,7 +6,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore.OData" Version="8.*" />
+        <PackageReference Include="Microsoft.AspNetCore.OData" Version="8.0.3" />        
     </ItemGroup>
 
     <ItemGroup>
