Handle odata function parameters. Add swashbuckle workaround for odata function parameters.
Improve test sample with NSwag

--- a/samples/TestSample/Properties/launchSettings.json
+++ b/samples/TestSample/Properties/launchSettings.json
@@ -27,11 +27,21 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "TestSample:swagger": {
+    "TestSample:swashbuckle-ui": {
       "commandName": "Project",
       "dotnetRunMessages": "true",
       "launchBrowser": true,
-      "launchUrl": "index.html?urls.primaryName=v2.0",
+      "launchUrl": "swashbuckle-ui/index.html?urls.primaryName=v2.0",
+      "applicationUrl": "http://localhost:5001",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      }
+    },
+    "TestSample:nswag-ui": {
+      "commandName": "Project",
+      "dotnetRunMessages": "true",
+      "launchBrowser": true,
+      "launchUrl": "nswag-ui/index.html?urls.primaryName=v2.0",
       "applicationUrl": "http://localhost:5001",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
