--- a/samples/TestSample/TestSample.csproj
+++ b/samples/TestSample/TestSample.csproj
@@ -20,6 +20,7 @@
 
     <ItemGroup>
         <ProjectReference Include="..\..\src\Stenn.AspNetCore.OData.Versioning.Extensions.DependencyInjection\Stenn.AspNetCore.OData.Versioning.Extensions.DependencyInjection.csproj" />
+        <ProjectReference Include="..\..\src\Stenn.AspNetCore.OData.Versioning.Newtonsoft.Json\Stenn.AspNetCore.OData.Versioning.Newtonsoft.Json.csproj" />
         <ProjectReference Include="..\..\src\Stenn.AspNetCore.OData.Versioning\Stenn.AspNetCore.OData.Versioning.csproj" />
         <ProjectReference Include="..\..\src\Stenn.AspNetCore.Versioning.Extensions.DependencyInjection\Stenn.AspNetCore.Versioning.Extensions.DependencyInjection.csproj" />
         <ProjectReference Include="..\..\src\Stenn.AspNetCore.Versioning.Swashbuckle\Stenn.AspNetCore.Versioning.Swashbuckle.csproj" />
