--- a/Stenn.AspNetCore.OData.Versioning.Tests/Stenn.AspNetCore.OData.Versioning.Tests.csproj
+++ b/Stenn.AspNetCore.OData.Versioning.Tests/Stenn.AspNetCore.OData.Versioning.Tests.csproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentAssertions" Version="6.3.0" />
+    <PackageReference Include="FluentAssertions.Json" Version="6.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0" />
     <PackageReference Include="NUnit" Version="3.13.2" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.2.0" />
