--- a/src/Stenn.AspNetCore.OData.Versioning.ApiExplorer/Stenn.AspNetCore.OData.Versioning.ApiExplorer.csproj
+++ b/src/Stenn.AspNetCore.OData.Versioning.ApiExplorer/Stenn.AspNetCore.OData.Versioning.ApiExplorer.csproj
@@ -10,25 +10,22 @@
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\Stenn.AspNetCore.OData.Versioning\Stenn.AspNetCore.OData.Versioning.csproj" />
-        <ProjectReference Include="..\Stenn.AspNetCore.Versioning\Stenn.AspNetCore.Versioning.csproj" />
+        <ProjectReference Include="..\Stenn.AspNetCore.OData.Versioning\Stenn.AspNetCore.OData.Versioning.csproj" />        
     </ItemGroup>
 
     <ItemGroup>
-        <EmbeddedResource Update="ApiExplorer\SR.resx">
+        <EmbeddedResource Update="SR.resx">
             <Generator>ResXFileCodeGenerator</Generator>
             <LastGenOutput>SR.Designer.cs</LastGenOutput>
         </EmbeddedResource>
     </ItemGroup>
 
     <ItemGroup>
-        <Compile Update="ApiExplorer\SR.Designer.cs">
+        <Compile Update="SR.Designer.cs">
             <DesignTime>True</DesignTime>
             <AutoGen>True</AutoGen>
             <DependentUpon>SR.resx</DependentUpon>
-        </Compile>
-        <Compile Remove="ApiExplorer\ODataApiExplorerProvider.Misc.cs" />
-        <Compile Remove="ODataModelProviderBase.cs" />
+        </Compile>            
         <Compile Remove="ODataApiExplorerProvider.Misc.cs" />
     </ItemGroup>
 
