--- a/samples/TestSample/TestSample.csproj
+++ b/samples/TestSample/TestSample.csproj
@@ -10,6 +10,9 @@
     <ItemGroup>
         <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="6.0.3" />
         <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.3" />
+        <PackageReference Include="Microsoft.OData.Core" Version="7.10.0" />
+        <PackageReference Include="Microsoft.OData.Edm" Version="7.10.0" />
+        <PackageReference Include="Microsoft.Spatial" Version="7.10.0" />
 
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.0" />
         <PackageReference Include="Swashbuckle.AspNetCore.Newtonsoft" Version="6.3.0" />
