--- a/src/Stenn.AspNetCore.OData.Versioning.Tests/Stenn.AspNetCore.OData.Versioning.Tests.csproj
+++ b/src/Stenn.AspNetCore.OData.Versioning.Tests/Stenn.AspNetCore.OData.Versioning.Tests.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="FluentAssertions" Version="6.5.1" />
     <PackageReference Include="FluentAssertions.Json" Version="6.1.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="NUnit" Version="3.13.2" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.2.1" />
     <PackageReference Include="coverlet.collector" Version="3.1.2">
