--- a/samples/TestSample/TestSample.csproj
+++ b/samples/TestSample/TestSample.csproj
@@ -1,24 +1,26 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
-        <TargetFramework>net6.0</TargetFramework>
-        <NoWarn>CS1591</NoWarn>
-
         <DocumentationFile>$(OutputPath)\$(MSBuildProjectName).xml</DocumentationFile>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="6.0.5" />
-        <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.5" />
-        <PackageReference Include="Microsoft.OData.Core" Version="7.11.0" />
-        <PackageReference Include="Microsoft.OData.Edm" Version="7.11.0" />
-        <PackageReference Include="Microsoft.Spatial" Version="7.11.0" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" />
+        <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" />
+        <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" />
+        <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" />
+        
+        <PackageReference Include="Microsoft.OData.Core" />
+        <PackageReference Include="Microsoft.OData.Edm" />
+        <PackageReference Include="Microsoft.Spatial" />
 
-        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.1" />
-        <PackageReference Include="Swashbuckle.AspNetCore.Newtonsoft" Version="6.3.1" />
-        <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="6.3.1" />
-        <PackageReference Include="Swashbuckle.AspNetCore.ReDoc" Version="6.3.1" />
-        <PackageReference Include="NSwag.AspNetCore" Version="13.15.10" />
+        <PackageReference Include="Swashbuckle.AspNetCore" />
+        <PackageReference Include="Swashbuckle.AspNetCore.Newtonsoft" />
+        <PackageReference Include="Swashbuckle.AspNetCore.Swagger" />
+        <PackageReference Include="Swashbuckle.AspNetCore.ReDoc" />
+        <PackageReference Include="NSwag.AspNetCore" />
+        
+        <PackageReference Remove="Microsoft.SourceLink.GitHub" />
     </ItemGroup>
 
     <ItemGroup>
