--- a/src/Stenn.AspNetCore.OData.Versioning.Newtonsoft.Json/Stenn.AspNetCore.OData.Versioning.Newtonsoft.Json.csproj
+++ b/src/Stenn.AspNetCore.OData.Versioning.Newtonsoft.Json/Stenn.AspNetCore.OData.Versioning.Newtonsoft.Json.csproj
@@ -6,8 +6,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore.OData" Version="8.0.8" />
-        <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />        
+        <PackageReference Include="Microsoft.AspNetCore.OData" />
+        <PackageReference Include="Newtonsoft.Json" />        
     </ItemGroup>
 
     <ItemGroup>
