--- a/src/Stenn.AspNetCore.Versioning/Stenn.AspNetCore.Versioning.csproj
+++ b/src/Stenn.AspNetCore.Versioning/Stenn.AspNetCore.Versioning.csproj
@@ -6,7 +6,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="5.0.0" />
+        <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" />
     </ItemGroup>
 
 </Project>
